加入收藏功能实现

--- a/static/css/articleTopic.css
+++ b/static/css/articleTopic.css
@@ -120,6 +120,9 @@ i {
 .nav-list li a{
     color: #7f7f7f;
 }
+.nav-list li>a:hover,.nav-list li h3 a:hover{
+    color: #fd007f;
+}
 
 
 .contentbg {
